add secret hash po password

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,1 +1,1 @@
-MONGO_URL="mongodb://root:example@localhost:27017/?directConnection=true&serverSelectionTimeoutMS=2000"
+SECRET_KEY="very_secret_key"
